--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 cryptography>=41.0.0
 faker>=19.0.0
-mmh3>=4.0.0  # For Bloom filter implementation
-pytest>=7.0.0  # For testing 
+mmh3>=4.0.0
+pytest>=7.0.0
+matplotlib>=3.7.0
